# Blockchain-NFT-platform-using-Scalable-Blockchains-Sui-Aptos-Solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md
contracts/: Move.toml
contracts/sources/: marketplace.move  nft.move  real_nft.move
frontend/: .env  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: LoyaltyDashboard.tsx  Marketplace.tsx  Mint.tsx  MintWidget.tsx  NFTCard.tsx  Navbar.tsx  WalletButton.tsx
frontend/src/constants/: aptos.ts
frontend/src/pages/: Create.tsx  Home.tsx
frontend/src/utils/: aptosClient.ts  ipfs.ts
programs/solana-counter/: Cargo.toml
programs/solana-counter/src/: lib.rs
sui_contracts/: Move.toml  Published.toml
sui_contracts/sources/: marketplace.move  nft.move
sui_contracts/tests/: nftloyalty_tests.move
tests/: solana-counter.ts
