[package]
name = "solana-counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]  # cdylib = compiled to .so binary
name = "solana_counter"         # Output binary name

[features]
default = []
cpi = ["no-entrypoint"]         # Cross-program invocation feature
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]  # IDL generation
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"          # Anchor framework — core dependency

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
